<resources>
    <string name="app_name">MarketPlace</string>
    <string name="register_title"> MarketPlace</string>
    <string name="register_subtitle">Crea tu cuenta</string>
    <string name="register_subtitle_text">Ingresa tu correo electronico para registrarte en esta aplicacion</string>
    <string name="hint_email">correoelectronico@upb.com</string>
    <string name="botton_continue">Continuar</string>
    <string name="textOr">o</string>
    <string name="botton_signIn">Ya tengo una cuenta</string>
    <string name="password">Contraseña</string>
    <!-- login -->
    <string name="login_subtitle"> Inicia sesion</string>
    <string name="login_subtitle_text">Ingresa tu correo electronico y contraseña para continuar</string>
    <string name="password_sign_in">Contraseña</string>
    <string name="botton_sign_in">Iniciar sesion</string>

    <string name="vender_producto"> Vender un producto </string>
    <string name="mis_compras"> Mis compras </string>
    <string name="perfil"> Perfil </string>
    <string name="mi_historial"> Mi historial </string>


    <string name="categoria"> Categorias </string>
    <string name="categoria1"> Vehiculos" </string>
    <string name="categoria2"> Ropa de Mujer</string>
    <string name="categoria3"> Electronica</string>
    <string name="categoria4"> Muebles</string>
    <string name="categoria5"> Ropa de Varon</string>
    <string name="categoria6"> Alquileres</string>
    <string name="categoria7"> Instrumentos</string>
    <string name="categoria8"> Ropa de Bebe</string>
    <string name="categoria9"> Deportes</string>


    <string name="historialproducto"> Historial</string>
    <string name="back">Back</string>
    <string name="producto">Producto</string>
    <string name="nombre">Nombre</string>
    <string name="descripcion">Descripción</string>
    <string name="precio">Precio</string>
    <string name="bolivianos">Bs.</string>
    <string name="imagen">Imagen</string>
    <string name="menu">Menu</string>
    <string name="carrito_de_compras">Carrito de compras</string>
    <string name="articulos">ARTÍCULOS</string>
    <string name="total_bs_0_0">Total: Bs. 0.0</string>
    <string name="vaciar_carrito">Vaciar carrito</string>
    <string name="hacer_pedido">Hacer pedido</string>
    <string name="agregar_al_carrito">Agregar al carrito</string>
    <string name="ir_al_carrito">Ir al carrito</string>
    <string name="buscar_producto">Buscar producto</string>
    <string name="compra_realizada">Compra realizada ✅</string>
    <string name="volver_al_inicio">Volver al inicio</string>
    <string name="pago_con_tarjeta">Pago con tarjeta</string>
    <string name="total_bs_0">Total: Bs. 0</string>
    <string name="nombre_del_titular">Nombre del titular</string>
    <string name="n_mero_de_tarjeta">Número de tarjeta</string>
    <string name="mm_aa">MM/AA</string>
    <string name="pagar">Pagar</string>
    <string name="cvv">CVV</string>
    <string name="cancelar">Cancelar</string>
    <string name="bs">Bs.</string>
    <string name="publicar_producto">Publicar producto</string>
    <string name="inicio">Inicio</string>
    <string name="vender">Vender</string>
    <string name="historial">Historial</string>
    <string name="categorias">Categorias</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>


</resources>