<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="18dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pago_con_tarjeta"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="12dp" />

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_bs_0"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etNombreTitular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_del_titular"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/etNumeroTarjeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/n_mero_de_tarjeta"
            android:inputType="number"
            android:maxLength="19"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etExpiracion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/mm_aa"
                android:inputType="text"
                android:maxLength="5"
                android:layout_marginEnd="8dp"/>

            <EditText
                android:id="@+id/etCvv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/cvv"
                android:inputType="numberPassword"
                android:maxLength="4"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnPagar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pagar"
            android:layout_marginTop="18dp"/>

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:layout_marginTop="8dp"/>
    </LinearLayout>
