<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".categorias">
    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/black"
        android:paddingStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <ImageView
        android:id="@+id/Menu"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/treslineas" />
    <TextView
        android:id="@+id/MarcoNegro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/categoria"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/filaCategorias"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingHorizontal="24dp"
        android:paddingTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintBottom_toTopOf="@id/BotonesAbajo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    <!-- Vehiculos -->
        <LinearLayout
            android:id="@+id/Fila1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingVertical="16dp">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/vehiculos"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/categoria1"
                    android:textSize="12sp"
                    android:textColor="@color/black"/>
            </LinearLayout>

    <!-- ropa mujer -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingVertical="16dp">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/mujer"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/categoria2"
                    android:textSize="12sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <!-- Electronica -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingVertical="16dp">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/electronica"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/categoria3"
                    android:textSize="12sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
    </LinearLayout>
    <!-- fila 2 -->
    <LinearLayout
        android:id="@+id/Fila2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <!-- Muebles -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="16dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/sofa" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/categoria4"
                android:textSize="12sp" />
        </LinearLayout>
        <!-- Ropa de Varon-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="16dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ropadevaron" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/categoria5"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Alquileres-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="16dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/alquileres" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/categoria6"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>
    <!-- fila 3 -->
    <LinearLayout
        android:id="@+id/Fila3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <!-- Instrumentos-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="16dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/instrumentos" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/categoria7"
                android:textSize="12sp" />
        </LinearLayout>
        <!-- Ropa de bebe-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="16dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ropadebebe" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/categoria8"
                android:textSize="12sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="16dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/deportes" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/categoria9"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/BotonesAbajo"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/white"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:id="@+id/imgCasa"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:src="@drawable/casita"
            android:contentDescription="@string/inicio"/>
        <ImageView
            android:id="@+id/imgCarrito"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:src="@drawable/carrito1"
            android:contentDescription="@string/agragar_carrito"/>
        <ImageView
            android:id="@+id/imgPerfil"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:src="@drawable/foto_perfil"
            android:contentDescription="@string/perfil"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>